--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "cros": "^1.0.1",
     "express": "^4.17.3",
     "mongoose": "^6.2.4",
+    "nodemailer": "^6.7.5",
     "nodemon": "^2.0.15"
   }
 }
